--- a/Day1/index.html
+++ b/Day1/index.html
@@ -6,6 +6,7 @@
   <title>Advent of Code: Day 1</title>
 </head>
 <body>
-  <script src="index.js"></script>
+  <h1>Day 1</h1>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
